[metadata]
name = assemblyai-sdk-quso
version = 0.0.1
author = quso
author_email = parth@vidyo.ai
description = A Fork of the AssemblyAI SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vidyo-ai/assemblyai-python-sdk
project_urls =
    Bug Tracker = https://github.com/vidyo-ai/assemblyai-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = assemblyai
packages = find:
python_requires = >=3.7

[options.packages.find]
where = assemblyai